ChangeLog
=========


2021-01-21: parceqt-0.17.0

- added Cursor.html() and copy_html() convenience methods
- moved debugging logic (signals etc) to main treebuilder
- debug: removed DebugFormatter, parce can now handle debug formatting itself
- debug window: larger text font by default
- fixed black colors in palette when textformat didn't specify color
- fixed other little bugs
- small api adjustments to parce-0.17.0


2021-01-17: parceqt-0.16.0

- added Edit → Copy selection as HTML
- parceqt.cursor(): fixed new attrname cursor.start → cursor.pos


2021-01-12: parceqt-0.15.0

- small api adjustments to parce-0.15.0
- some cleanups
- documentation switched to Furo theme, looks better on small devices


2021-01-02: parceqt-0.14.0

- added Document.find_start/end_of_line() reimplementation using QTextBlock
- small api adjustments to parce-0.14.0


2020-06-02: parceqt-0.13.0

- small api adjustments to parce-0.13.0


2020-05-18: parceqt-0.12.0

- very small api adjustments to parce-0.12.0


2020-05-13: parceqt-0.10.0

- very small api adjustments to parce-0.10.0


2020-05-04: parceqt-0.9.0

- some small api adjustments to parce-0.9.0
- set window title of debugger window


2020-04-25: parceqt-0.8.5

- add "Debug Unparsed Text" theme, highlighting unparsed text
- adjust treebuilder and highlighter to the new peek() call of parce.treebuilder
- debug window:
  - when opening a file, automatically guess the language to use
  - new commands to show/hide the tree and to reload the theme stylesheet
  - Ctrl-wheel zoom now changes the font size of the text editor window
  - add expand/collapse actions
  - ability to run the debug window with python3 -m parceqt.debug <filename>


2020-04-07: parceqt-0.8.0

- added treemodel.TreeModel
- added debug module with debugger window
- use new peek feature to quickly update highlighting surrounding change


2020-03-14: parceqt-0.7.0

- don't set a default Theme on init of SyntaxHighlighter, this causes