@@ -35,7 +35,7 @@ Version = collections.namedtuple("Version", "major minor patch")
 name = "parceqt"
 
 #: the current version
-version = Version(0, 17, 0)
+version = Version(0, 25, 0)
 version_suffix = ""
 version_string = "{}.{}.{}".format(*version) + version_suffix
 
@@ -59,5 +59,5 @@ url = "https://github.com/wbsoft/parceqt"
 license = "GPL"
 
 #: copyright year
-copyright_year = "2020"
+copyright_year = "2020-2021"
 
